bk_ida/gccida/g2/dump_global_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_global_regs/src/global.c:2475:16: error: use of undeclared identifier 'off_646752'
fprintf( file, off_646752, ( unsigned int)v4++); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_global_regs/src/obj/global.o] Error 1
